New in v0.7.07 (2016/04/??)
---------------------------
* Fixed bug #1568677
  - bug introduced by incomplete fix of bug #1296793
  - simplified setting of bucket locations
* Fixed bug #1569523
  - bug introduced in improper fix of bug #1568677
  - gotta love those inconsistent APIs


New in v0.7.07 (2016/04/10)
---------------------------
* Merged in lp:~matthew-t-bentley/duplicity/b2
  - Fix import and error typos.
  - Allow multiple backups in the same bucket.
  - Fixes bug #1523498.
  - A couple fixes allowing multiple backups to be hosted in different
    folders in the same bucket as well as some logging for -v9.
* Random stuff:
  - remove RPM stuff from makedist
  - have makedist pull directly from VCS, not local dir
  - update po translation directory and build process
  - clean up some odd error messages
  - move Pep8 ignores to tox.ini
  - supply correct path for pydevd under Mac
  - fix some tests to run under Linux and Mac
* Partial fix for bug #1529606 - shell code injection in lftpbackend
  - still need to fix the other backends that spawn shell commands
* Make test_restart compatible with both GNUtar and BSDtar
* Fix stupid issue with functional test path for duplicity
* Applied patch from shaochun to fix bug #1531154,
  - --file-changed failed when file contains spaces
* Applied patch from abeverly to fix bug #1475890
  - allow port to be specified along with hostname on S3
  - adjusted help text and man page to reflect the change
* Undo changes to test_restart.py.  GNU tar is needed.
* Fix minor pep8 nit in collections.py
* Applied changes from ralle-ubuntu to fix bug 1072130.
  - duplicity does not support ftpes://
* Fixed bug #1296793 - Failed to create bucket
  - use S3Connection.lookup() to check bucket exists
  - skips Boto's Exception processing for this check
  - dupe of bug #1507109 and bug #1537185
* Merged in lp:~mifchip/duplicity/duplicity
  - fix bug #1313964, absolute path doesn't work for FTP